<resources>
    <string name="app_name">Smaniro CBT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="para_peserta_ujian">Para Peserta Ujian</string>
    <string name="input_url">input URL / alamat IP</string>
    <string name="akses_cbt_smaniro">Akses CBT SMANIRO</string>
    <string name="cari">Cari</string>
    <string name="title_activity_webview">CBT</string>
    <string name="maju">Maju</string>
    <string name="kembali">Kembali</string>
    <string name="refresh">Refresh</string>
    <string name="text_url">URL</string>
    <string name="tentang">Tentang Aplikasi</string>
    <string name="error_webview">Terjadi kesalahan, pastikan wifi/data seluler terhubung</string>
</resources>