<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smaniro.smanirocbt.MainActivity">
    <item
        android:id="@+id/menu_back"
        android:title="@string/kembali"
        android:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_forward"
        android:title="@string/maju"
        android:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        app:showAsAction="ifRoom" />
</menu>