<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/selamat_datang"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/para_peserta_ujian"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_url"
            android:visibility="gone"
            app:endIconMode="custom"
            app:endIconDrawable="@android:drawable/ic_menu_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:endIconContentDescription="@string/input_url">

            <AutoCompleteTextView
                android:background="@null"
                android:id="@+id/autoURL"
                android:imeOptions="actionSearch"
                android:inputType="textUri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSmaniro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/akses_cbt_smaniro" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        android:text="@string/text_url"
        android:textAlignment="center"
        android:textColor="#616161"
        tools:ignore="TextContrastCheck" />

</android.widget.LinearLayout>